feat: added editor opening logic

--- a/common/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "ibeeditor.category": "IBE Editor",
-  "ibeeditor.key.editor": "Open Editor"
+  "ibeeditor.key.editor": "Open Editor",
+  "ibeeditor.key.clipboard": "Open Clipboard"
 }
