feat: started working on MVC implementation in GUAPI

--- a/common/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "ibeeditor.category": "IBE Editor",
   "ibeeditor.key.editor": "Open Editor",
-  "ibeeditor.key.clipboard": "Open Clipboard"
+  "ibeeditor.key.clipboard": "Open Clipboard",
+  "ibeeditor.gui.editor": "Editor"
 }
