--- a/common/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -2,5 +2,7 @@
   "ibeeditor.category": "IBE Editor",
   "ibeeditor.key.editor": "Open Editor",
   "ibeeditor.key.clipboard": "Open Clipboard",
-  "ibeeditor.gui.editor": "Editor"
+  "ibeeditor.gui.editor": "Editor",
+  "ibeeditor.gui.category.main": "Main",
+  "ibeeditor.gui.entry.test": "Test"
 }
