--- a/common/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -1,8 +1,10 @@
 {
   "ibeeditor.category": "IBE Editor",
   "ibeeditor.key.editor": "Open Editor",
+  "ibeeditor.key.nbt_editor": "Open NBT Editor",
   "ibeeditor.key.clipboard": "Open Clipboard",
   "ibeeditor.gui.editor": "Editor",
+  "ibeeditor.gui.nbt_editor": "NBT Editor",
   "ibeeditor.gui.category.main": "Main",
   "ibeeditor.gui.entry.test": "Test"
 }
