feat: uncommitted stuff that i've started working on

--- a/common/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -5,8 +5,20 @@
   "ibeeditor.key.clipboard": "Open Clipboard",
   "ibeeditor.gui.editor": "Editor",
   "ibeeditor.gui.nbt_editor": "NBT Editor",
-  "ibeeditor.gui.category.main": "Main",
-  "ibeeditor.gui.entry.test": "Test",
-  "ibeeditor.message.must_install": "You must install IBE Editor in order to use this command.",
-  "ibeeditor.message.must_install_2": "Click here to download the mod!"
+  "ibeeditor.gui.switch_raw_nbt_editor": "Switch to Raw NBT Editor",
+  "ibeeditor.gui.switch_nbt_editor": "Switch to NBT Editor",
+  "ibeeditor.gui.move_up": "Move Up",
+  "ibeeditor.gui.move_down": "Move Down",
+  "ibeeditor.gui.add": "Add",
+  "ibeeditor.gui.remove": "Remove",
+  "ibeeditor.gui.cut": "Cut",
+  "ibeeditor.gui.copy": "Copy",
+  "ibeeditor.gui.paste": "Paste",
+  "ibeeditor.gui.collapse": "Collapse all",
+  "ibeeditor.gui.expand": "Expand all",
+  "ibeeditor.gui.scroll_focused": "Scroll to focused",
+  "ibeeditor.gui.zoom_reset": "Reset Zoom",
+  "ibeeditor.gui.zoom_out": "Zoom Out",
+  "ibeeditor.gui.zoom_in": "Zoom In",
+  "ibeeditor.gui.add_tag": "Add %s Tag"
 }
