--- a/common/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -2,6 +2,7 @@
   "ibeeditor.category": "IBE Editor",
   "ibeeditor.key.editor": "Open Editor",
   "ibeeditor.key.nbt_editor": "Open NBT Editor",
+  "ibeeditor.key.raw_nbt_editor": "Open Raw NBT Editor",
   "ibeeditor.key.clipboard": "Open Clipboard",
   "ibeeditor.gui.editor": "Editor",
   "ibeeditor.gui.nbt_editor": "NBT Editor",
