feat: added enumbutton node + started working on config screen

--- a/common/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -4,8 +4,11 @@
   "ibeeditor.key.nbt_editor": "Open NBT Editor",
   "ibeeditor.key.raw_nbt_editor": "Open Raw NBT Editor",
   "ibeeditor.key.clipboard": "Open Clipboard",
-  "ibeeditor.gui.editor": "Editor",
+  "ibeeditor.gui.item_editor": "Item Editor",
+  "ibeeditor.gui.block_editor": "Block Editor",
+  "ibeeditor.gui.entity_editor": "Entity Editor",
   "ibeeditor.gui.nbt_editor": "NBT Editor",
+  "ibeeditor.gui.settings": "Settings",
   "ibeeditor.gui.switch_raw_nbt_editor": "Switch to Raw NBT Editor",
   "ibeeditor.gui.switch_nbt_editor": "Switch to NBT Editor",
   "ibeeditor.gui.move_up": "Move Up",
