--- a/common/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -50,7 +50,7 @@
   "ibeeditor.gui.editor.category.general": "General",
   "ibeeditor.gui.editor.item.entry.item_id": "Item ID",
   "ibeeditor.gui.editor.item.entry.count": "Count",
-  "ibeeditor.gui.editor.item.entry.name": "Name",
+  "ibeeditor.gui.editor.item.entry.custom_name": "Custom Name",
   "ibeeditor.gui.config.category.client": "Client",
   "ibeeditor.gui.config.entry.theme": "Theme",
   "ibeeditor.gui.config.entry.debug_mode": "Debug Mode",
