--- a/common/src/main/resources/assets/ibeeditor/lang/fr_fr.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/fr_fr.json
@@ -50,7 +50,7 @@
   "ibeeditor.gui.editor.category.general": "General",
   "ibeeditor.gui.editor.item.entry.item_id": "ID de l'item",
   "ibeeditor.gui.editor.item.entry.count": "Quantité",
-  "ibeeditor.gui.editor.item.entry.name": "Nom",
+  "ibeeditor.gui.editor.item.entry.custom_name": "Nom Custom",
   "ibeeditor.gui.config.category.client": "Client",
   "ibeeditor.gui.config.entry.theme": "Thème",
   "ibeeditor.gui.config.entry.debug_mode": "Mode débug",
