--- a/common/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -48,9 +48,14 @@
   "ibeeditor.gui.fix_errors": "You must fix errors before applying changes.",
   "ibeeditor.gui.reset_default": "Reset to default",
   "ibeeditor.gui.editor.category.general": "General",
+  "ibeeditor.gui.editor.category.display": "Display",
   "ibeeditor.gui.editor.item.entry.item_id": "Item ID",
   "ibeeditor.gui.editor.item.entry.count": "Count",
+  "ibeeditor.gui.editor.item.entry.damage": "Damage",
+  "ibeeditor.gui.editor.item.entry.unbreakable": "Unbreakable",
   "ibeeditor.gui.editor.item.entry.custom_name": "Custom Name",
+  "ibeeditor.gui.editor.item.entry.lore": "Lore #%s",
+  "ibeeditor.gui.editor.item.entry.lore_add": "Add Lore",
   "ibeeditor.gui.config.category.client": "Client",
   "ibeeditor.gui.config.entry.theme": "Theme",
   "ibeeditor.gui.config.entry.debug_mode": "Debug Mode",
