--- a/common/src/main/resources/assets/ibeeditor/lang/fr_fr.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/fr_fr.json
@@ -48,9 +48,14 @@
   "ibeeditor.gui.fix_errors": "Vous devez corriger les erreurs avant de pouvoir sauvegarder.",
   "ibeeditor.gui.reset_default": "Remettre la valeur par défaut",
   "ibeeditor.gui.editor.category.general": "General",
+  "ibeeditor.gui.editor.category.display": "Affichage",
   "ibeeditor.gui.editor.item.entry.item_id": "ID de l'item",
   "ibeeditor.gui.editor.item.entry.count": "Quantité",
+  "ibeeditor.gui.editor.item.entry.damage": "Dégâts",
+  "ibeeditor.gui.editor.item.entry.unbreakable": "Incassable",
   "ibeeditor.gui.editor.item.entry.custom_name": "Nom Custom",
+  "ibeeditor.gui.editor.item.entry.lore": "Description #%s",
+  "ibeeditor.gui.editor.item.entry.lore_add": "Add Lore",
   "ibeeditor.gui.config.category.client": "Client",
   "ibeeditor.gui.config.entry.theme": "Thème",
   "ibeeditor.gui.config.entry.debug_mode": "Mode débug",
