feat(item-editor): added enchantments

--- a/common/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -49,6 +49,7 @@
   "ibeeditor.gui.reset": "Reset",
   "ibeeditor.gui.editor.category.general": "General",
   "ibeeditor.gui.editor.category.display": "Display",
+  "ibeeditor.gui.editor.category.enchantments": "Enchantments",
   "ibeeditor.gui.editor.item.entry.item_id": "Item ID",
   "ibeeditor.gui.editor.item.entry.count": "Count",
   "ibeeditor.gui.editor.item.entry.damage": "Damage",
@@ -56,6 +57,7 @@
   "ibeeditor.gui.editor.item.entry.custom_name": "Custom Name",
   "ibeeditor.gui.editor.item.entry.lore": "Lore #%s",
   "ibeeditor.gui.editor.item.entry.lore_add": "Add Lore",
+  "ibeeditor.gui.editor.item.entry.add_level": "%s level",
   "ibeeditor.gui.config.category.client": "Client",
   "ibeeditor.gui.config.entry.theme": "Theme",
   "ibeeditor.gui.config.entry.debug_mode": "Debug Mode",
