feat: improved selection screen

--- a/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -47,12 +47,14 @@
   "ibeeditor.gui.custom_color": "Custom Color...",
   "ibeeditor.gui.fix_errors": "You must fix errors before applying changes.",
   "ibeeditor.gui.reset": "Reset",
+  "ibeeditor.gui.search": "Search...",
   "ibeeditor.gui.general": "General",
   "ibeeditor.gui.display": "Display",
   "ibeeditor.gui.enchantments": "Enchantments",
   "ibeeditor.gui.attribute_modifiers": "Attribute Modifiers",
   "ibeeditor.gui.hide_flags": "Hide Flags",
   "ibeeditor.gui.item_id": "Item ID",
+  "ibeeditor.gui.choose_item": "Choose item...",
   "ibeeditor.gui.count": "Count",
   "ibeeditor.gui.damage": "Damage",
   "ibeeditor.gui.custom_name": "Custom Name",
