feat: added Can Destroy / Can Place On categories

--- a/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -54,7 +54,7 @@
   "ibeeditor.gui.attribute_modifiers": "Attribute Modifiers",
   "ibeeditor.gui.hide_flags": "Hide Flags",
   "ibeeditor.gui.item_id": "Item ID",
-  "ibeeditor.gui.choose_item": "Choose item...",
+  "ibeeditor.gui.choose": "Choose %s...",
   "ibeeditor.gui.count": "Count",
   "ibeeditor.gui.damage": "Damage",
   "ibeeditor.gui.custom_name": "Custom Name",
@@ -62,7 +62,7 @@
   "ibeeditor.gui.lore_add": "Add Lore",
   "ibeeditor.gui.level_add": "%s level",
   "ibeeditor.gui.attribute_name": "Attribute name",
-  "ibeeditor.gui.choose_attribute": "Choose attribute...",
+  "ibeeditor.gui.attribute": "Attribute",
   "ibeeditor.gui.slot": "Slot",
   "ibeeditor.gui.mainhand": "Mainhand",
   "ibeeditor.gui.offhand": "Offhand",
