feat(item-editor): added potion type and color selection

--- a/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -45,7 +45,9 @@
   "ibeeditor.gui.light_purple": "Light Purple",
   "ibeeditor.gui.yellow": "Yellow",
   "ibeeditor.gui.white": "White",
-  "ibeeditor.gui.custom_color": "Custom Color...",
+  "ibeeditor.gui.choose_custom_color": "Choose Custom Color...",
+  "ibeeditor.gui.remove_custom_color": "Remove Custom Color",
+  "ibeeditor.gui.custom_color": "Custom Color",
   "ibeeditor.gui.fix_errors": "You must fix errors before applying changes.",
   "ibeeditor.gui.reset": "Reset",
   "ibeeditor.gui.search": "Search...",
@@ -91,6 +93,9 @@
   "ibeeditor.gui.hide_other_tooltip_6": "- Fireworks data",
   "ibeeditor.gui.hide_other_tooltip_7": "- Map tooltips",
   "ibeeditor.gui.potion_effects": "Potion Effects",
+  "ibeeditor.gui.default_potion": "Default Potion",
+  "ibeeditor.gui.potion_color": "Potion Color",
+  "ibeeditor.gui.potion": "Potion",
   "ibeeditor.gui.client": "Client",
   "ibeeditor.gui.theme": "Theme",
   "ibeeditor.gui.debug_mode": "Debug Mode",
