--- a/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/fr_fr.json
+++ b/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/fr_fr.json
@@ -44,7 +44,8 @@
   "ibeeditor.gui.light_purple": "Rose",
   "ibeeditor.gui.yellow": "Jaune",
   "ibeeditor.gui.white": "Blanc",
-  "ibeeditor.gui.custom_color": "Couleur personnalisée...",
+  "ibeeditor.gui.choose_custom_color": "Choisir une couleur personnalisée...",
+  "ibeeditor.gui.custom_color": "Couleur personnalisée",
   "ibeeditor.gui.fix_errors": "Vous devez corriger les erreurs avant de pouvoir sauvegarder.",
   "ibeeditor.gui.reset": "Remettre la valeur par défaut",
   "ibeeditor.gui.general": "General",
