fix: small fixes & translation

--- a/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -10,7 +10,7 @@
   "ibeeditor.gui.switch_nbt_editor": "Switch to NBT Editor",
   "ibeeditor.gui.move_up": "Move Up",
   "ibeeditor.gui.move_down": "Move Down",
-  "ibeeditor.gui.add": "Add",
+  "ibeeditor.gui.add": "Add %s",
   "ibeeditor.gui.remove": "Remove",
   "ibeeditor.gui.cut": "Cut",
   "ibeeditor.gui.copy": "Copy",
@@ -55,6 +55,7 @@
   "ibeeditor.gui.display": "Display",
   "ibeeditor.gui.enchantments": "Enchantments",
   "ibeeditor.gui.attribute_modifiers": "Attribute Modifiers",
+  "ibeeditor.gui.modifier": "Modifier",
   "ibeeditor.gui.hide_flags": "Hide Flags",
   "ibeeditor.gui.item_id": "Item ID",
   "ibeeditor.gui.choose": "Choose %s...",
@@ -62,7 +63,7 @@
   "ibeeditor.gui.damage": "Damage",
   "ibeeditor.gui.custom_name": "Custom Name",
   "ibeeditor.gui.lore": "Lore #%s",
-  "ibeeditor.gui.lore_add": "Add Lore",
+  "ibeeditor.gui.lore_add": "Lore",
   "ibeeditor.gui.level_add": "%s level",
   "ibeeditor.gui.attribute_name": "Attribute name",
   "ibeeditor.gui.attribute": "Attribute",
