--- a/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/fr_fr.json
+++ b/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/fr_fr.json
@@ -10,7 +10,7 @@
   "ibeeditor.gui.switch_nbt_editor": "Passer en mode visuel",
   "ibeeditor.gui.move_up": "Monter",
   "ibeeditor.gui.move_down": "Descendre",
-  "ibeeditor.gui.add": "Ajouter",
+  "ibeeditor.gui.add": "Ajouter %s",
   "ibeeditor.gui.remove": "Supprimer",
   "ibeeditor.gui.cut": "Couper",
   "ibeeditor.gui.copy": "Copier",
@@ -56,7 +56,7 @@
   "ibeeditor.gui.damage": "Dégâts",
   "ibeeditor.gui.custom_name": "Nom Custom",
   "ibeeditor.gui.lore": "Description #%s",
-  "ibeeditor.gui.lore_add": "Ajouter une ligne",
+  "ibeeditor.gui.lore_add": "une ligne",
   "ibeeditor.gui.level_add": "%s niveau",
   "ibeeditor.gui.client": "Client",
   "ibeeditor.gui.theme": "Thème",
@@ -68,5 +68,52 @@
   "ibeeditor.message.error_creative_mode": "Vous devez être en mode créatif pour modifier ce %s.",
   "ibeeditor.message.error_server_mod": "IBE Editor doit être installé sur le serveur pour modifier ce %s.",
   "ibeeditor.message.success_update": "%s mis à jour!",
-  "ibeeditor.message.no_target_found": "Aucun %s modifiable détecté"
+  "ibeeditor.message.no_target_found": "Aucun %s modifiable détecté",
+  "ibeeditor.gui.reset_color": "Réinitialiser la couleur",
+  "ibeeditor.gui.remove_custom_color": "Enlever la couleur",
+  "ibeeditor.gui.search": "Rechercher...",
+  "ibeeditor.gui.attribute_modifiers": "Modificateurs d'attributs",
+  "ibeeditor.gui.modifier": "Modificateur",
+  "ibeeditor.gui.hide_flags": "Drapeaux cacheurs",
+  "ibeeditor.gui.choose": "Choisir %s...",
+  "ibeeditor.gui.attribute_name": "Nom de l'attribut",
+  "ibeeditor.gui.attribute": "Attribut",
+  "ibeeditor.gui.slot": "Slot",
+  "ibeeditor.gui.mainhand": "Main principale",
+  "ibeeditor.gui.offhand": "Main secondaire",
+  "ibeeditor.gui.feet": "Pieds",
+  "ibeeditor.gui.legs": "Jambes",
+  "ibeeditor.gui.chest": "Torse",
+  "ibeeditor.gui.head": "Tête",
+  "ibeeditor.gui.operation": "Opération: %s",
+  "ibeeditor.gui.operation_0": "Ajouter (0)",
+  "ibeeditor.gui.operation_1": "Multiplier base (1)",
+  "ibeeditor.gui.operation_2": "Multiplier (2)",
+  "ibeeditor.gui.amount": "Quantité",
+  "ibeeditor.gui.hide": "Cacher %s",
+  "ibeeditor.gui.unbreakable": "Incassable",
+  "ibeeditor.gui.can_destroy": "Peut détruire",
+  "ibeeditor.gui.can_place_on": "Peut placer sur",
+  "ibeeditor.gui.other": "Autre",
+  "ibeeditor.gui.dyed": "Coloré",
+  "ibeeditor.gui.hide_other_tooltip_0": "Cache:",
+  "ibeeditor.gui.hide_other_tooltip_1": "- Effets de potion",
+  "ibeeditor.gui.hide_other_tooltip_2": "- Motifs de bouclier",
+  "ibeeditor.gui.hide_other_tooltip_3": "- Enchantments des livres enchantés",
+  "ibeeditor.gui.hide_other_tooltip_4": "- Auteur et \"original\" / \"copie\" des livres écrits",
+  "ibeeditor.gui.hide_other_tooltip_5": "- Données d'explosion",
+  "ibeeditor.gui.hide_other_tooltip_6": "- Données de feux d'atrifices",
+  "ibeeditor.gui.hide_other_tooltip_7": "- Données de cartes",
+  "ibeeditor.gui.potion_effects": "Effets de potion",
+  "ibeeditor.gui.default_potion": "Potion par défaut",
+  "ibeeditor.gui.potion_color": "Couleur de la potion",
+  "ibeeditor.gui.potion": "Potion",
+  "ibeeditor.gui.effect": "Effet",
+  "ibeeditor.gui.amplifier": "Amplificateur (0 = niveau 1, etc)",
+  "ibeeditor.gui.duration": "Durée (en ticks)",
+  "ibeeditor.gui.ambient": "Ambiant (effets de particules plus transparents)",
+  "ibeeditor.gui.show_particles": "Montrer les particules",
+  "ibeeditor.gui.show_icon": "Montrer l'icône",
+  "ibeeditor.message.prefix": "[IBE Editor] ",
+  "ibeeditor.message.error_generic": "Une erreur est survenue. Merci de regarder les logs pour plus de détails et de rapporter cette erreur au créateur du mod."
 }
