feat: added leather armor color category

--- a/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -103,6 +103,7 @@
   "ibeeditor.gui.ambient": "Ambient (more transparent particle effects)",
   "ibeeditor.gui.show_particles": "Show Particles",
   "ibeeditor.gui.show_icon": "Show Icon",
+  "ibeeditor.gui.armor_color": "Armor Color",
   "ibeeditor.gui.client": "Client",
   "ibeeditor.gui.theme": "Theme",
   "ibeeditor.gui.debug_mode": "Debug Mode",
