--- a/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -2,11 +2,10 @@
   "ibeeditor.category": "IBE Editor",
   "ibeeditor.key.editor": "Open Editor",
   "ibeeditor.key.nbt_editor": "Open NBT Editor",
-  "ibeeditor.key.raw_nbt_editor": "Open Raw NBT Editor",
+  "ibeeditor.key.snbt_editor": "Open SNBT Editor",
   "ibeeditor.key.bookmarks": "Open Clipboard",
   "ibeeditor.gui.editor_title": "%s Editor",
   "ibeeditor.gui.settings": "Settings",
-  "ibeeditor.gui.switch_raw_nbt_editor": "Switch to Raw NBT Editor",
   "ibeeditor.gui.switch_nbt_editor": "Switch to NBT Editor",
   "ibeeditor.gui.move_up": "Move Up",
   "ibeeditor.gui.move_down": "Move Down",
