--- a/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -115,5 +115,6 @@
   "ibeeditor.message.error_server_mod": "IBE Editor must be installed on the server to update this %s.",
   "ibeeditor.message.success_update": "%s updated!",
   "ibeeditor.message.no_target_found": "No editable %s found",
-  "ibeeditor.message.error_generic": "An error occured. Please check the logs for more details and report the issue to the mod author."
+  "ibeeditor.message.error_generic": "An error occured. Please check the logs for more details and report the issue to the mod author.",
+  "ibeeditor.message.not_implemented": "The %s Editor is not implemented yet and will come in a future release."
 }
