fix: error in the editor when editing an item with an attribute modifier without a slot property

--- a/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -73,6 +73,7 @@
   "ibeeditor.gui.legs": "Legs",
   "ibeeditor.gui.chest": "Chest",
   "ibeeditor.gui.head": "Head",
+  "ibeeditor.gui.all": "All",
   "ibeeditor.gui.operation": "Operation: %s",
   "ibeeditor.gui.operation_0": "Add (0)",
   "ibeeditor.gui.operation_1": "Multiply base (1)",
