--- a/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/ru_ru.json
+++ b/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/ru_ru.json
@@ -107,9 +107,9 @@
   "ibeeditor.gui.theme": "Тема",
   "ibeeditor.gui.debug_mode": "Режим отладки",
   "ibeeditor.gui.reload_config": "Перезагрузить настройки с диска",
-  "ibeeditor.text.item": "[Предмет]",
-  "ibeeditor.text.block": "[Блок]",
-  "ibeeditor.text.entity": "[Сущность]",
+  "ibeeditor.text.item": "Предмет",
+  "ibeeditor.text.block": "Блок",
+  "ibeeditor.text.entity": "Сущность",
   "ibeeditor.message.prefix": "[IBE Editor] ",
   "ibeeditor.message.error_creative_mode": "Вы должны быть в творческом режиме, чтобы обновить %s.",
   "ibeeditor.message.error_server_mod": "IBE Editor должен быть установлен на сервере, чтобы обновить %s.",
