--- a/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/ru_ru.json
+++ b/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/ru_ru.json
@@ -63,6 +63,7 @@
   "ibeeditor.gui.custom_name": "Название",
   "ibeeditor.gui.lore": "Описание №%s",
   "ibeeditor.gui.lore_add": "описание",
+  "ibeeditor.gui.level": "Уровень",
   "ibeeditor.gui.level_add": "%s уровень",
   "ibeeditor.gui.attribute_name": "Имя атрибута",
   "ibeeditor.gui.attribute": "атрибут",
