refactor: text handling

--- a/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/fr_fr.json
+++ b/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/fr_fr.json
@@ -1,7 +1,8 @@
 {
-  "ibeeditor.category": "IBE Editor",
+  "ibeeditor": "IBE Editor",
   "ibeeditor.key.editor": "Ouvrir l'éditeur",
   "ibeeditor.key.nbt_editor": "Ouvrir l'éditeur NBT",
+  "ibeeditor.key.snbt_editor": "Ouvrir l'éditeur SNBT",
   "ibeeditor.key.bookmarks": "Ouvrir les favoris",
   "ibeeditor.gui.editor_title": "Editeur de %s",
   "ibeeditor.gui.settings": "Paramètres",
@@ -27,6 +28,7 @@
   "ibeeditor.gui.underline": "Souligné",
   "ibeeditor.gui.strikethough": "Barré",
   "ibeeditor.gui.obfuscated": "Obfusqué",
+  "ibeeditor.gui.reset_color": "Réinitialiser la couleur",
   "ibeeditor.gui.black": "Noir",
   "ibeeditor.gui.dark_blue": "Bleu foncé",
   "ibeeditor.gui.dark_green": "Vert foncé",
@@ -43,38 +45,25 @@
   "ibeeditor.gui.light_purple": "Rose",
   "ibeeditor.gui.yellow": "Jaune",
   "ibeeditor.gui.white": "Blanc",
-  "ibeeditor.gui.choose_custom_color": "Choisir une couleur personnalisée...",
+  "ibeeditor.gui.remove_custom_color": "Enlever la couleur",
   "ibeeditor.gui.custom_color": "Couleur personnalisée",
   "ibeeditor.gui.fix_errors": "Vous devez corriger les erreurs avant de pouvoir sauvegarder.",
   "ibeeditor.gui.reset": "Remettre la valeur par défaut",
+  "ibeeditor.gui.search": "Rechercher...",
   "ibeeditor.gui.general": "General",
   "ibeeditor.gui.display": "Affichage",
   "ibeeditor.gui.enchantments": "Enchantements",
+  "ibeeditor.gui.attribute_modifiers": "Modificateurs d'attributs",
+  "ibeeditor.gui.modifier": "Modificateur",
+  "ibeeditor.gui.hide_flags": "Drapeaux cacheurs",
   "ibeeditor.gui.item_id": "ID de l'item",
+  "ibeeditor.gui.choose": "Choisir %s...",
   "ibeeditor.gui.count": "Quantité",
   "ibeeditor.gui.damage": "Dégâts",
   "ibeeditor.gui.custom_name": "Nom Custom",
   "ibeeditor.gui.lore": "Description #%s",
   "ibeeditor.gui.lore_add": "une ligne",
   "ibeeditor.gui.level_add": "%s niveau",
-  "ibeeditor.gui.client": "Client",
-  "ibeeditor.gui.theme": "Thème",
-  "ibeeditor.gui.debug_mode": "Mode débug",
-  "ibeeditor.gui.reload_config": "Recharger la configuration depuis le fichier",
-  "ibeeditor.text.item": "Item",
-  "ibeeditor.text.block": "Bloc",
-  "ibeeditor.text.entity": "Entité",
-  "ibeeditor.message.error_creative_mode": "Vous devez être en mode créatif pour modifier ce %s.",
-  "ibeeditor.message.error_server_mod": "IBE Editor doit être installé sur le serveur pour modifier ce %s.",
-  "ibeeditor.message.success_update": "%s mis à jour!",
-  "ibeeditor.message.no_target_found": "Aucun %s modifiable détecté",
-  "ibeeditor.gui.reset_color": "Réinitialiser la couleur",
-  "ibeeditor.gui.remove_custom_color": "Enlever la couleur",
-  "ibeeditor.gui.search": "Rechercher...",
-  "ibeeditor.gui.attribute_modifiers": "Modificateurs d'attributs",
-  "ibeeditor.gui.modifier": "Modificateur",
-  "ibeeditor.gui.hide_flags": "Drapeaux cacheurs",
-  "ibeeditor.gui.choose": "Choisir %s...",
   "ibeeditor.gui.attribute_name": "Nom de l'attribut",
   "ibeeditor.gui.attribute": "Attribut",
   "ibeeditor.gui.slot": "Slot",
@@ -84,10 +73,11 @@
   "ibeeditor.gui.legs": "Jambes",
   "ibeeditor.gui.chest": "Torse",
   "ibeeditor.gui.head": "Tête",
+  "ibeeditor.gui.all": "Tous",
   "ibeeditor.gui.operation": "Opération: %s",
-  "ibeeditor.gui.operation_0": "Ajouter (0)",
-  "ibeeditor.gui.operation_1": "Multiplier base (1)",
-  "ibeeditor.gui.operation_2": "Multiplier (2)",
+  "ibeeditor.gui.operation.0": "Ajouter (0)",
+  "ibeeditor.gui.operation.1": "Multiplier base (1)",
+  "ibeeditor.gui.operation.2": "Multiplier (2)",
   "ibeeditor.gui.amount": "Quantité",
   "ibeeditor.gui.hide": "Cacher %s",
   "ibeeditor.gui.unbreakable": "Incassable",
@@ -95,14 +85,14 @@
   "ibeeditor.gui.can_place_on": "Peut placer sur",
   "ibeeditor.gui.other": "Autre",
   "ibeeditor.gui.dyed": "Coloré",
-  "ibeeditor.gui.hide_other_tooltip_0": "Cache:",
-  "ibeeditor.gui.hide_other_tooltip_1": "- Effets de potion",
-  "ibeeditor.gui.hide_other_tooltip_2": "- Motifs de bouclier",
-  "ibeeditor.gui.hide_other_tooltip_3": "- Enchantments des livres enchantés",
-  "ibeeditor.gui.hide_other_tooltip_4": "- Auteur et \"original\" / \"copie\" des livres écrits",
-  "ibeeditor.gui.hide_other_tooltip_5": "- Données d'explosion",
-  "ibeeditor.gui.hide_other_tooltip_6": "- Données de feux d'atrifices",
-  "ibeeditor.gui.hide_other_tooltip_7": "- Données de cartes",
+  "ibeeditor.gui.hide_other_tooltip.0": "Hides:",
+  "ibeeditor.gui.hide_other_tooltip.1": "- Potion effects",
+  "ibeeditor.gui.hide_other_tooltip.2": "- Shield pattern",
+  "ibeeditor.gui.hide_other_tooltip.3": "- Enchanted Book enchantments",
+  "ibeeditor.gui.hide_other_tooltip.4": "- Written Book author and \"original\" / \"copy\"",
+  "ibeeditor.gui.hide_other_tooltip.5": "- Explosion data",
+  "ibeeditor.gui.hide_other_tooltip.6": "- Fireworks data",
+  "ibeeditor.gui.hide_other_tooltip.7": "- Map tooltips",
   "ibeeditor.gui.potion_effects": "Effets de potion",
   "ibeeditor.gui.default_potion": "Potion par défaut",
   "ibeeditor.gui.potion_color": "Couleur de la potion",
@@ -114,9 +104,18 @@
   "ibeeditor.gui.show_particles": "Montrer les particules",
   "ibeeditor.gui.show_icon": "Montrer l'icône",
   "ibeeditor.gui.armor_color": "Couleur de l'armure",
+  "ibeeditor.gui.client": "Client",
+  "ibeeditor.gui.theme": "Thème",
+  "ibeeditor.gui.debug_mode": "Mode débug",
+  "ibeeditor.gui.reload_config": "Recharger la configuration depuis le fichier",
+  "ibeeditor.text.item": "Item",
+  "ibeeditor.text.block": "Bloc",
+  "ibeeditor.text.entity": "Entité",
   "ibeeditor.message.prefix": "[IBE Editor] ",
+  "ibeeditor.message.error_creative_mode": "Vous devez être en mode créatif pour modifier ce %s.",
+  "ibeeditor.message.error_server_mod": "IBE Editor doit être installé sur le serveur pour modifier ce %s.",
+  "ibeeditor.message.success_update": "%s mis à jour!",
+  "ibeeditor.message.no_target_found": "Aucun %s modifiable détecté",
   "ibeeditor.message.error_generic": "Une erreur est survenue. Merci de regarder les logs pour plus de détails et de rapporter cette erreur au créateur du mod.",
-  "ibeeditor.key.snbt_editor": "Ouvrir l'éditeur SNBT",
-  "ibeeditor.message.not_implemented": "L'éditeur de %s n'est pas encore implémenté et viendra dans une prochaine mise à jour.",
-  "ibeeditor.gui.all": "Tous"
+  "ibeeditor.message.not_implemented": "L'éditeur de %s n'est pas encore implémenté et viendra dans une prochaine mise à jour."
 }
