--- a/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/fr_fr.json
+++ b/ibeeditor/base/src/main/resources/assets/ibeeditor/lang/fr_fr.json
@@ -107,11 +107,11 @@
   "ibeeditor.gui.client": "Client",
   "ibeeditor.gui.theme": "Thème",
   "ibeeditor.gui.debug_mode": "Mode débug",
+  "ibeeditor.gui.selection_screen_max_items": "Eléments max écran sélection",
   "ibeeditor.gui.reload_config": "Recharger la configuration depuis le fichier",
   "ibeeditor.text.item": "Item",
   "ibeeditor.text.block": "Bloc",
   "ibeeditor.text.entity": "Entité",
-  "ibeeditor.message.prefix": "[IBE Editor] ",
   "ibeeditor.message.error_creative_mode": "Vous devez être en mode créatif pour modifier ce %s.",
   "ibeeditor.message.error_server_mod": "IBE Editor doit être installé sur le serveur pour modifier ce %s.",
   "ibeeditor.message.success_update": "%s mis à jour!",
