--- a/common/src/main/resources/assets/ibeeditor/lang/fr_fr.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/fr_fr.json
@@ -1,90 +1,57 @@
 {
   "ibeeditor": "IBE Editor",
-  "ibeeditor.key.editor": "Ouvrir l'éditeur",
-  "ibeeditor.key.nbt_editor": "Ouvrir l'éditeur NBT",
-  "ibeeditor.key.snbt_editor": "Ouvrir l'éditeur SNBT",
-  "ibeeditor.key.bookmarks": "Ouvrir les favoris",
-  "ibeeditor.gui.editor_title": "Editeur de %s",
-  "ibeeditor.gui.settings": "Paramètres",
-  "ibeeditor.gui.switch_nbt_editor": "Passer en mode visuel",
-  "ibeeditor.gui.move_up": "Monter",
-  "ibeeditor.gui.move_down": "Descendre",
   "ibeeditor.gui.add": "Ajouter %s",
-  "ibeeditor.gui.remove": "Supprimer",
-  "ibeeditor.gui.cut": "Couper",
-  "ibeeditor.gui.copy": "Copier",
-  "ibeeditor.gui.paste": "Coller",
-  "ibeeditor.gui.collapse": "Tout fermer",
-  "ibeeditor.gui.expand": "Tout ouvrir",
-  "ibeeditor.gui.scroll_focused": "Défiler vers sélection",
-  "ibeeditor.gui.zoom_reset": "Zoom par défaut",
-  "ibeeditor.gui.zoom_out": "Dézoomer",
-  "ibeeditor.gui.zoom_in": "Zoomer",
   "ibeeditor.gui.add_tag": "Ajouter un tag %s",
-  "ibeeditor.gui.close_without_saving": "Fermer sans sauvegarder",
-  "ibeeditor.gui.save": "Sauvegarder",
-  "ibeeditor.gui.bold": "Gras",
-  "ibeeditor.gui.italic": "Italique",
-  "ibeeditor.gui.underline": "Souligné",
-  "ibeeditor.gui.strikethough": "Barré",
-  "ibeeditor.gui.obfuscated": "Obfusqué",
-  "ibeeditor.gui.reset_color": "Réinitialiser la couleur",
-  "ibeeditor.gui.black": "Noir",
-  "ibeeditor.gui.dark_blue": "Bleu foncé",
-  "ibeeditor.gui.dark_green": "Vert foncé",
-  "ibeeditor.gui.dark_aqua": "Turquoise foncé",
-  "ibeeditor.gui.dark_red": "Rouge foncé",
-  "ibeeditor.gui.dark_purple": "Violet foncé",
-  "ibeeditor.gui.gold": "Or",
-  "ibeeditor.gui.gray": "Gris",
-  "ibeeditor.gui.dark_gray": "Gris foncé",
-  "ibeeditor.gui.blue": "Bleu",
-  "ibeeditor.gui.green": "Vert",
-  "ibeeditor.gui.aqua": "Turquoise",
-  "ibeeditor.gui.red": "Rouge",
-  "ibeeditor.gui.light_purple": "Rose",
-  "ibeeditor.gui.yellow": "Jaune",
-  "ibeeditor.gui.white": "Blanc",
-  "ibeeditor.gui.remove_custom_color": "Enlever la couleur",
-  "ibeeditor.gui.custom_color": "Couleur personnalisée",
-  "ibeeditor.gui.fix_errors": "Vous devez corriger les erreurs avant de pouvoir sauvegarder.",
-  "ibeeditor.gui.reset": "Remettre la valeur par défaut",
-  "ibeeditor.gui.search": "Rechercher...",
-  "ibeeditor.gui.general": "General",
-  "ibeeditor.gui.display": "Affichage",
-  "ibeeditor.gui.enchantments": "Enchantements",
-  "ibeeditor.gui.attribute_modifiers": "Modificateurs d'attributs",
-  "ibeeditor.gui.modifier": "Modificateur",
-  "ibeeditor.gui.hide_flags": "Drapeaux cacheurs",
-  "ibeeditor.gui.item_id": "ID de l'item",
-  "ibeeditor.gui.choose": "Choisir %s...",
-  "ibeeditor.gui.count": "Quantité",
-  "ibeeditor.gui.damage": "Dégâts",
-  "ibeeditor.gui.custom_name": "Nom Custom",
-  "ibeeditor.gui.lore": "Description #%s",
-  "ibeeditor.gui.lore_add": "une ligne",
-  "ibeeditor.gui.level_add": "%s niveau",
-  "ibeeditor.gui.attribute_name": "Nom de l'attribut",
-  "ibeeditor.gui.attribute": "Attribut",
-  "ibeeditor.gui.slot": "Slot",
-  "ibeeditor.gui.mainhand": "Main principale",
-  "ibeeditor.gui.offhand": "Main secondaire",
-  "ibeeditor.gui.feet": "Pieds",
-  "ibeeditor.gui.legs": "Jambes",
-  "ibeeditor.gui.chest": "Torse",
-  "ibeeditor.gui.head": "Tête",
   "ibeeditor.gui.all": "Tous",
-  "ibeeditor.gui.operation": "Opération: %s",
-  "ibeeditor.gui.operation.0": "Ajouter (0)",
-  "ibeeditor.gui.operation.1": "Multiplier base (1)",
-  "ibeeditor.gui.operation.2": "Multiplier (2)",
+  "ibeeditor.gui.ambient": "Ambiant (effets de particules plus transparents)",
   "ibeeditor.gui.amount": "Quantité",
-  "ibeeditor.gui.hide": "Cacher %s",
-  "ibeeditor.gui.unbreakable": "Incassable",
+  "ibeeditor.gui.amplifier": "Amplificateur (0 = niveau 1, etc)",
+  "ibeeditor.gui.aqua": "Turquoise",
+  "ibeeditor.gui.armor_color": "Couleur de l'armure",
+  "ibeeditor.gui.attribute": "Attribut",
+  "ibeeditor.gui.attribute_modifiers": "Modificateurs d'attributs",
+  "ibeeditor.gui.attribute_name": "Nom de l'attribut",
+  "ibeeditor.gui.black": "Noir",
+  "ibeeditor.gui.block_state": "Etat de bloc",
+  "ibeeditor.gui.blue": "Bleu",
+  "ibeeditor.gui.bold": "Gras",
   "ibeeditor.gui.can_destroy": "Peut détruire",
   "ibeeditor.gui.can_place_on": "Peut placer sur",
-  "ibeeditor.gui.other": "Autre",
+  "ibeeditor.gui.chest": "Torse",
+  "ibeeditor.gui.choose": "Choisir %s...",
+  "ibeeditor.gui.client": "Client",
+  "ibeeditor.gui.close_without_saving": "Fermer sans sauvegarder",
+  "ibeeditor.gui.collapse": "Tout fermer",
+  "ibeeditor.gui.copy": "Copier",
+  "ibeeditor.gui.count": "Quantité",
+  "ibeeditor.gui.custom_color": "Couleur personnalisée",
+  "ibeeditor.gui.custom_name": "Nom Custom",
+  "ibeeditor.gui.cut": "Couper",
+  "ibeeditor.gui.damage": "Dégâts",
+  "ibeeditor.gui.dark_aqua": "Turquoise foncé",
+  "ibeeditor.gui.dark_blue": "Bleu foncé",
+  "ibeeditor.gui.dark_gray": "Gris foncé",
+  "ibeeditor.gui.dark_green": "Vert foncé",
+  "ibeeditor.gui.dark_purple": "Violet foncé",
+  "ibeeditor.gui.dark_red": "Rouge foncé",
+  "ibeeditor.gui.debug_mode": "Mode débug",
+  "ibeeditor.gui.default_potion": "Potion par défaut",
+  "ibeeditor.gui.display": "Affichage",
+  "ibeeditor.gui.duration": "Durée (en ticks)",
   "ibeeditor.gui.dyed": "Coloré",
+  "ibeeditor.gui.editor_title": "Editeur de %s",
+  "ibeeditor.gui.effect": "Effet",
+  "ibeeditor.gui.enchantments": "Enchantements",
+  "ibeeditor.gui.expand": "Tout ouvrir",
+  "ibeeditor.gui.feet": "Pieds",
+  "ibeeditor.gui.fix_errors": "Vous devez corriger les erreurs avant de pouvoir sauvegarder.",
+  "ibeeditor.gui.general": "General",
+  "ibeeditor.gui.gold": "Or",
+  "ibeeditor.gui.gray": "Gris",
+  "ibeeditor.gui.green": "Vert",
+  "ibeeditor.gui.head": "Tête",
+  "ibeeditor.gui.hide": "Cacher %s",
+  "ibeeditor.gui.hide_flags": "Drapeaux cacheurs",
   "ibeeditor.gui.hide_other_tooltip.0": "Hides:",
   "ibeeditor.gui.hide_other_tooltip.1": "- Potion effects",
   "ibeeditor.gui.hide_other_tooltip.2": "- Shield pattern",
@@ -93,29 +60,64 @@
   "ibeeditor.gui.hide_other_tooltip.5": "- Explosion data",
   "ibeeditor.gui.hide_other_tooltip.6": "- Fireworks data",
   "ibeeditor.gui.hide_other_tooltip.7": "- Map tooltips",
-  "ibeeditor.gui.potion_effects": "Effets de potion",
-  "ibeeditor.gui.default_potion": "Potion par défaut",
-  "ibeeditor.gui.potion_color": "Couleur de la potion",
+  "ibeeditor.gui.italic": "Italique",
+  "ibeeditor.gui.item_id": "ID de l'item",
+  "ibeeditor.gui.legs": "Jambes",
+  "ibeeditor.gui.level_add": "%s niveau",
+  "ibeeditor.gui.light_purple": "Rose",
+  "ibeeditor.gui.lore": "Description #%s",
+  "ibeeditor.gui.lore_add": "une ligne",
+  "ibeeditor.gui.mainhand": "Main principale",
+  "ibeeditor.gui.modifier": "Modificateur",
+  "ibeeditor.gui.move_down": "Descendre",
+  "ibeeditor.gui.move_up": "Monter",
+  "ibeeditor.gui.obfuscated": "Obfusqué",
+  "ibeeditor.gui.offhand": "Main secondaire",
+  "ibeeditor.gui.operation": "Opération: %s",
+  "ibeeditor.gui.operation.0": "Ajouter (0)",
+  "ibeeditor.gui.operation.1": "Multiplier base (1)",
+  "ibeeditor.gui.operation.2": "Multiplier (2)",
+  "ibeeditor.gui.other": "Autre",
+  "ibeeditor.gui.paste": "Coller",
   "ibeeditor.gui.potion": "Potion",
-  "ibeeditor.gui.effect": "Effet",
-  "ibeeditor.gui.amplifier": "Amplificateur (0 = niveau 1, etc)",
-  "ibeeditor.gui.duration": "Durée (en ticks)",
-  "ibeeditor.gui.ambient": "Ambiant (effets de particules plus transparents)",
-  "ibeeditor.gui.show_particles": "Montrer les particules",
-  "ibeeditor.gui.show_icon": "Montrer l'icône",
-  "ibeeditor.gui.armor_color": "Couleur de l'armure",
-  "ibeeditor.gui.client": "Client",
-  "ibeeditor.gui.theme": "Thème",
-  "ibeeditor.gui.debug_mode": "Mode débug",
-  "ibeeditor.gui.selection_screen_max_items": "Eléments max écran sélection",
+  "ibeeditor.gui.potion_color": "Couleur de la potion",
+  "ibeeditor.gui.potion_effects": "Effets de potion",
+  "ibeeditor.gui.red": "Rouge",
   "ibeeditor.gui.reload_config": "Recharger la configuration depuis le fichier",
-  "ibeeditor.text.item": "Item",
+  "ibeeditor.gui.remove": "Supprimer",
+  "ibeeditor.gui.remove_custom_color": "Enlever la couleur",
+  "ibeeditor.gui.reset": "Remettre la valeur par défaut",
+  "ibeeditor.gui.reset_color": "Réinitialiser la couleur",
+  "ibeeditor.gui.save": "Sauvegarder",
+  "ibeeditor.gui.scroll_focused": "Défiler vers sélection",
+  "ibeeditor.gui.search": "Rechercher...",
+  "ibeeditor.gui.selection_screen_max_items": "Eléments max écran sélection",
+  "ibeeditor.gui.settings": "Paramètres",
+  "ibeeditor.gui.show_icon": "Montrer l'icône",
+  "ibeeditor.gui.show_particles": "Montrer les particules",
+  "ibeeditor.gui.slot": "Slot",
+  "ibeeditor.gui.spawn_egg": "Oeuf invocateur",
+  "ibeeditor.gui.strikethough": "Barré",
+  "ibeeditor.gui.switch_nbt_editor": "Passer en mode visuel",
+  "ibeeditor.gui.theme": "Thème",
+  "ibeeditor.gui.unbreakable": "Incassable",
+  "ibeeditor.gui.underline": "Souligné",
+  "ibeeditor.gui.white": "Blanc",
+  "ibeeditor.gui.yellow": "Jaune",
+  "ibeeditor.gui.zoom_in": "Zoomer",
+  "ibeeditor.gui.zoom_out": "Dézoomer",
+  "ibeeditor.gui.zoom_reset": "Zoom par défaut",
+  "ibeeditor.key.bookmarks": "Ouvrir les favoris",
+  "ibeeditor.key.editor": "Ouvrir l'éditeur",
+  "ibeeditor.key.nbt_editor": "Ouvrir l'éditeur NBT",
+  "ibeeditor.key.snbt_editor": "Ouvrir l'éditeur SNBT",
+  "ibeeditor.message.error_creative_mode": "Vous devez être en mode créatif pour modifier ce %s.",
+  "ibeeditor.message.error_generic": "Une erreur est survenue. Merci de regarder les logs pour plus de détails et de rapporter cette erreur au créateur du mod.",
+  "ibeeditor.message.error_server_mod": "IBE Editor doit être installé sur le serveur pour modifier ce %s.",
+  "ibeeditor.message.no_target_found": "Aucun %s modifiable détecté",
+  "ibeeditor.message.not_implemented": "L'éditeur de %s n'est pas encore implémenté et viendra dans une prochaine mise à jour.",
+  "ibeeditor.message.success_update": "%s mis à jour!",
   "ibeeditor.text.block": "Bloc",
   "ibeeditor.text.entity": "Entité",
-  "ibeeditor.message.error_creative_mode": "Vous devez être en mode créatif pour modifier ce %s.",
-  "ibeeditor.message.error_server_mod": "IBE Editor doit être installé sur le serveur pour modifier ce %s.",
-  "ibeeditor.message.success_update": "%s mis à jour!",
-  "ibeeditor.message.no_target_found": "Aucun %s modifiable détecté",
-  "ibeeditor.message.error_generic": "Une erreur est survenue. Merci de regarder les logs pour plus de détails et de rapporter cette erreur au créateur du mod.",
-  "ibeeditor.message.not_implemented": "L'éditeur de %s n'est pas encore implémenté et viendra dans une prochaine mise à jour."
+  "ibeeditor.text.item": "Item"
 }
