feat: 1.18 architectury update

--- a/common/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -52,6 +52,7 @@
   "ibeeditor.gui.search": "Search...",
   "ibeeditor.gui.general": "General",
   "ibeeditor.gui.display": "Display",
+  "ibeeditor.gui.enchantment": "Enchantment",
   "ibeeditor.gui.enchantments": "Enchantments",
   "ibeeditor.gui.attribute_modifiers": "Attribute Modifiers",
   "ibeeditor.gui.modifier": "Modifier",
@@ -109,6 +110,7 @@
   "ibeeditor.gui.debug_mode": "Debug Mode",
   "ibeeditor.gui.selection_screen_max_items": "Selection screen max items",
   "ibeeditor.gui.reload_config": "Reload configuration from disk",
+  "ibeeditor.gui.level": "Level",
   "ibeeditor.text.item": "Item",
   "ibeeditor.text.block": "Block",
   "ibeeditor.text.entity": "Entity",
