feat: added container category with custom name and lock code

--- a/common/src/main/resources/assets/ibeeditor/lang/en_us.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/en_us.json
@@ -107,6 +107,8 @@
   "ibeeditor.gui.armor_color": "Armor Color",
   "ibeeditor.gui.spawn_egg": "Spawn Egg",
   "ibeeditor.gui.block_state": "Block State",
+  "ibeeditor.gui.container": "Container",
+  "ibeeditor.gui.lock_code": "Lock Code",
   "ibeeditor.gui.client": "Client",
   "ibeeditor.gui.theme": "Theme",
   "ibeeditor.gui.debug_mode": "Debug Mode",
