--- a/common/src/main/resources/assets/ibeeditor/lang/zh_cn.json
+++ b/common/src/main/resources/assets/ibeeditor/lang/zh_cn.json
@@ -58,9 +58,9 @@
   "ibeeditor.gui.modifier": "修改",
   "ibeeditor.gui.hide_flags": "隐藏标签",
   "ibeeditor.gui.item_id": "物品ID",
-  "ibeeditor.gui.choose": "选择%s……",
+  "ibeeditor.gui.choose": "选择%s…",
   "ibeeditor.gui.count": "数量",
-  "ibeeditor.gui.damage": "上海",
+  "ibeeditor.gui.damage": "伤害",
   "ibeeditor.gui.custom_name": "自定义名称",
   "ibeeditor.gui.lore": "Lore #%s",
   "ibeeditor.gui.lore_add": "Lore",
@@ -76,8 +76,8 @@
   "ibeeditor.gui.head": "头盔",
   "ibeeditor.gui.all": "全部",
   "ibeeditor.gui.operation": "操作：%s",
-  "ibeeditor.gui.operation.0": "添加(0)",
-  "ibeeditor.gui.operation.1": "乘基(1)",
+  "ibeeditor.gui.operation.0": "加法(0)",
+  "ibeeditor.gui.operation.1": "乘法基数(1)",
   "ibeeditor.gui.operation.2": "乘法(2)",
   "ibeeditor.gui.amount": "数量",
   "ibeeditor.gui.hide": "隐藏%s",
@@ -108,11 +108,11 @@
   "ibeeditor.gui.client": "客户端",
   "ibeeditor.gui.theme": "主题",
   "ibeeditor.gui.debug_mode": "调试模式",
-  "ibeeditor.gui.selection_screen_max_items": "选择屏幕最大项目数",
+  "ibeeditor.gui.selection_screen_max_items": "选择屏幕最大物品数",
   "ibeeditor.gui.common": "通用",
   "ibeeditor.gui.permission_level": "权限等级",
   "ibeeditor.gui.creative_only": "仅限创造",
-  "ibeeditor.gui.reload_config": "从磁盘重新加载配置",
+  "ibeeditor.gui.reload_config": "重新加载配置文件",
   "ibeeditor.gui.level": "等级",
   "ibeeditor.text.item": "物品",
   "ibeeditor.text.block": "方块",
